--- a/newreq.css
+++ b/newreq.css
@@ -491,11 +491,14 @@
   display: inline-block;
   min-width: 50px;
 }
+
+
+
 .component-142,
 .icons32 {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: f;
 }
 .icons32 {
   flex-direction: row;
@@ -515,45 +518,8 @@
   box-sizing: border-box;
   gap: var(--gap-9xs);
 }
-.label694 {
-  width: 100%;
-  border: 0;
-  outline: 0;
-  font-family: var(--font-roboto);
-  font-size: var(--body-body-14-size);
-  background-color: transparent;
-  height: 21px;
-  flex: 1;
-  position: relative;
-  line-height: 150%;
-  color: var(--color-gray-100);
-  text-align: left;
-  display: inline-block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  min-width: 172px;
-  padding: 0;
-}
-.field642 {
-  position: absolute;
-  height: 33.6%;
-  width: 92.44%;
-  top: 66.4%;
-  right: 0;
-  bottom: 0;
-  left: 7.56%;
-  border-radius: var(--br-5xs);
-  background-color: var(--color-white);
-  border: 1px solid var(--color-gainsboro);
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: var(--padding-4xs) var(--padding-mini);
-  z-index: 1;
-}
+
+
 .component-14-parent {
   align-self: stretch;
   height: 123.2px;
@@ -584,6 +550,7 @@
   width: 318px;
   flex-direction: row;
   gap: var(--gap-5xs);
+  margin-top: -40px;
 }
 .component-2112 {
   align-self: stretch;
@@ -1447,3 +1414,4 @@
     box-sizing: border-box;
   }
 }
+
