--- a/profile.css
+++ b/profile.css
@@ -4528,6 +4528,16 @@ width: 100%;
   color: inherit;
   cursor: pointer;
   outline: none;
+  border-radius: var(--br-5xs);
+  background-color: var(--color-white);
+  border: 1px solid var(--color-gainsboro);
+  box-sizing: border-box;
+ padding: var(--padding-5xs) var(--padding-mini);
+  gap: var(--gap-base);
+  white-space: nowrap;
+  font-size: var(--body-body-14-size);
+  color: var(--color-gray-100);
+  font-family: var(--font-roboto);
 }
 .component-2710 {
   align-self: stretch;
