--- a/admin/admin-borrower-info.css
+++ b/admin/admin-borrower-info.css
@@ -18,16 +18,17 @@
 .admin-borrower-info .footer {
   align-self: stretch;
   position: absolute;
-  width: 1440px;
+  width: 2640px;
   height: 85px;
   top: 939px;
   left: 0;
+  background-color: transparent;
   background: linear-gradient(
-    174.57deg,
-    #ed3d43,
-    #a72025 23.51%,
-    #86171b 49.05%,
-    #3d1112
+    180deg,
+    rgb(237.1, 60.99, 66.91) 0%,
+    rgb(166.7, 32.46, 36.98) 23.51%,
+    rgb(133.5, 23.22, 26.92) 54.18%,
+    rgb(61, 16.47, 17.96) 100%
   );
   flex-direction: row;
   padding: var(--padding-12xl) var(--padding-73xl);
@@ -60,17 +61,17 @@
 
 .admin-borrower-info .header {
   position: absolute;
-  width: 1440px;
+  width: 2640px;
   height: 92px;
   top: 0;
   left: 0;
   background-color: transparent;
   background: linear-gradient(
-    8.16deg,
-    #ed3d43,
-    #a72025 23.51%,
-    #86171b 54.18%,
-    #3d1112
+    180deg,
+    rgb(237.1, 60.99, 66.91) 0%,
+    rgb(166.7, 32.46, 36.98) 23.51%,
+    rgb(133.5, 23.22, 26.92) 54.18%,
+    rgb(61, 16.47, 17.96) 100%
   );
 }
 
@@ -151,6 +152,7 @@
   left: 1095px;
   background-color: #d3b331;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .admin-borrower-info .p {
@@ -191,7 +193,6 @@
 .admin-borrower-info .frame {
   display: inline-flex;
   align-items: center;
-  gap: 2px;
   position: absolute;
   top: 0;
   left: 0;
@@ -201,6 +202,7 @@
   position: relative;
   width: 185px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-borrower-info .div-wrapper {
@@ -231,6 +233,7 @@
   position: relative;
   width: 199px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-borrower-info .overlap-3 {
@@ -291,6 +294,7 @@
   position: relative;
   width: 229px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-borrower-info .overlap-5 {
@@ -321,6 +325,7 @@
   position: relative;
   width: 187px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-borrower-info .overlap-6 {
@@ -352,6 +357,7 @@
   width: 224px;
   height: 39px;
   margin-right: -2px;
+  cursor: pointer;
 }
 
 .admin-borrower-info .overlap-7 {
@@ -836,4 +842,16 @@
   height: 25px;
   top: 16px;
   left: 312px;
+}
+
+
+button {
+  border: none; 
+  background: none; 
+  padding: 0; 
+  cursor: pointer;
+}
+
+button img {
+  display: block; 
 }
