--- a/admin/admin-financial-info.css
+++ b/admin/admin-financial-info.css
@@ -1,9 +1,11 @@
 .admin-financial-info {
-  background-color: #fafafa;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
   width: 100%;
+  background-color: var(--color-gray-100);
+  overflow: hidden;
+  flex-direction: column;
+  gap: var(--gap-19xl-5);
+  line-height: normal;
+  letter-spacing: normal;
 }
 
 .admin-financial-info .div {
@@ -15,17 +17,17 @@
 
 .admin-financial-info .footer {
   position: absolute;
-  width: 1440px;
+  width: 2640px;
   height: 85px;
   top: 939px;
   left: 0;
   background-color: transparent;
   background: linear-gradient(
-    8.16deg,
-    #ed3d43,
-    #a72025 23.51%,
-    #86171b 54.18%,
-    #3d1112
+    180deg,
+    rgb(237.1, 60.99, 66.91) 0%,
+    rgb(166.7, 32.46, 36.98) 23.51%,
+    rgb(133.5, 23.22, 26.92) 54.18%,
+    rgb(61, 16.47, 17.96) 100%
   );
 }
 
@@ -52,17 +54,17 @@
 
 .admin-financial-info .header {
   position: absolute;
-  width: 1440px;
+  width: 2640px;
   height: 92px;
   top: 0;
   left: 0;
   background-color: transparent;
   background: linear-gradient(
-    8.16deg,
-    #ed3d43,
-    #a72025 23.51%,
-    #86171b 54.18%,
-    #3d1112
+    180deg,
+    rgb(237.1, 60.99, 66.91) 0%,
+    rgb(166.7, 32.46, 36.98) 23.51%,
+    rgb(133.5, 23.22, 26.92) 54.18%,
+    rgb(61, 16.47, 17.96) 100%
   );
 }
 
@@ -183,7 +185,6 @@
 .admin-financial-info .frame {
   display: inline-flex;
   align-items: center;
-  gap: 2px;
   position: absolute;
   top: 0;
   left: 0;
@@ -193,6 +194,7 @@
   position: relative;
   width: 185px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-financial-info .div-wrapper {
@@ -223,6 +225,7 @@
   position: relative;
   width: 199px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-financial-info .overlap-3 {
@@ -262,6 +265,7 @@
   position: relative;
   width: 234px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-financial-info .overlap-4 {
@@ -322,6 +326,7 @@
   position: relative;
   width: 187px;
   height: 39px;
+  cursor: pointer;
 }
 
 .admin-financial-info .overlap-6 {
@@ -353,6 +358,7 @@
   width: 224px;
   height: 39px;
   margin-right: -2px;
+  cursor: pointer;
 }
 
 .admin-financial-info .overlap-7 {
@@ -674,4 +680,15 @@
   height: 25px;
   top: 16px;
   left: 312px;
+}
+
+button {
+  border: none; 
+  background: none; 
+  padding: 0; 
+  cursor: pointer;
+}
+
+button img {
+  display: block; 
 }
